dataset1235/2025-2/610742602/users/1593150881/executions/906907063_1467685783.log
== SUBMISSION (2025-08-19 21:05:36)
-- CODE: 
amigos: 20 pessoas
quantidade por amigo: 35
total: quantidade de amigos * valor por pessoa
print ("o valor total da conta foi: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:16:27)
-- CODE: 
amigos=20
valor_por_pessoa=35
total= amigos * valor_por_pessoa
print("o valor total da conta é: R$, 700")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta é: R$, 700
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
---- user output:
o valor total da conta é: R$, 700
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:08:04)
-- CODE: 
amigos: 20 pessoas
quantidade por amigo: 35
print(20*35)
print("o valor total da conta foi 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:14:42)
-- CODE: 
amigos: 20 
gasto por amigo: 35
total = amigos * gasto por amigo
print("o valor total da conta foi 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    gasto por amigo: 35
          ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    gasto por amigo: 35
          ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:11:19)
-- CODE: 
amigos: 20 
quantidade por amigo: 35
print(20*35=700)
print("o valor total da conta foi 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    quantidade por amigo: 35
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    quantidade por amigo: 35
               ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:07:32)
-- CODE: 
amigos: 20 pessoas
quantidade por amigo: 35
print(total de amigos * quantidade por pessoa)
print("o valor total da conta foi: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:11:29)
-- CODE: 
amigos: 20 
quantidade por amigo: 35
print(20*35)
print("o valor total da conta foi 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    quantidade por amigo: 35
               ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    quantidade por amigo: 35
               ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:07:43)
-- CODE: 
amigos: 20 pessoas
quantidade por amigo: 35
print(total de amigos * quantidade por pessoa)
print("o valor total da conta foi 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:04:23)
-- CODE: 
amigos: 20 pessoas
quantidade por amigo: 35
total de amigos * valor por pessoa
print ("o valor total da conta foi: 700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 1
    amigos: 20 pessoas
               ^^^^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 21:14:50)
-- CODE: 
amigos: 20 
gasto por amigo: 35
total = amigos * gasto por amigo
print("700")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    gasto por amigo: 35
          ^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
xx
---- correct output:
700
-- ERROR:
File "XXXX", line 2
    gasto por amigo: 35
          ^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
